--- a/frontend/grid/grid.html
+++ b/frontend/grid/grid.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" >
+    <title>Grid layout</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <header>
@@ -15,5 +19,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="grid-layout">
+            <div class="red one"></div>
+            <div class="orange two"></div>
+            <div class="green three"></div>
+            <div class="blue four"></div>
+            <div class="blue five"></div>
+        </div>
+    </main>
 </body>
 </html>
