--- a/frontend/grid/index.html
+++ b/frontend/grid/index.html
@@ -16,5 +16,45 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="flex-layout">
+            <div class="car sedans">
+                <div class="flow car--content">
+                    <div class="img">
+                        <img src="./assets/icon-sedans.svg" alt="sedan cars" class="car-icons" />
+                    </div>
+                    <h1 class="car-heading">Sedans</h1>
+                    <p class="car-text">
+                        Choose a sedan for its affordability and exellent fuel economy. Ideal for cruising in the city or on your next road trip.
+                    </p>
+                </div>
+                <button class="learn-more car-btn">Learn more</button>
+            </div>
+            <div class="car suvs">
+                <div class="flow car--content">
+                    <div class="img">
+                        <img src="./assets/icon-suvs.svg" alt="sedan cars" class="car-icons" />
+                    </div>
+                    <h1 class="car-heading">Suvs</h1>
+                    <p class="car-text">
+                        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+                    </p>
+                </div>
+                <button class="learn-more car-btn">Learn more</button>
+            </div>
+            <div class="car luxury">
+                <div class="flow car--content">
+                    <div class="img">
+                        <img src="./assets/icon-luxury.svg" alt="sedan cars" class="car-icons" />
+                    </div>
+                    <h1 class="car-heading">Luxury</h1>
+                    <p class="car-text">
+                        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+                    </p>
+                </div>
+                <button class="learn-more car-btn">Learn more</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
