Add basic form validation

--- a/frontend/html-page/contact.html
+++ b/frontend/html-page/contact.html
@@ -27,16 +27,16 @@
             <div class="input-group__items grid">
                 <div class="input-group__item">
                     <label for="name">Name</label>
-                    <input type="text" />
+                    <input type="text" required />
                 </div>
                 <div class="input-group__item">
                     <label for="email">Email Address</label>
-                    <input type="email" />
+                    <input type="email" required />
                 </div>
             </div>
             <div class="input-group__item">
                 <label for="message">Message</label>
-                <textarea name="message"></textarea>
+                <textarea name="message" required></textarea>
             </div>
             <button type="submit">Send Message</button>
         </form>
@@ -46,5 +46,6 @@
             <p>&copy; AbigailAdeboga 2022</p>
         </div>
     </footer>
+    
 </body>
 </html>
