--- a/frontend/huddle/index.html
+++ b/frontend/huddle/index.html
@@ -56,15 +56,50 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="footer--banner card flow">
+                <h2>Ready To Build Your Community?</h2>
+                <button class="get-started-btn">Get Started For Free</button>
+            </div>
+        </section>
     </main>
-    <footer>
-        <div class="footer--banner card flow">
-            <h2>Ready To Build Your Community?</h2>
-            <button class="get-started-btn">Get Started For Free</button>
+    <footer class="flow">
+        <div class="">
+            <img src="./assets/logo2.svg" alt="" class="logo">
         </div>
         <div class="footer--links">
-            <div class="">
-                <img src="./assets/logo2.svg" alt="" class="logo">
+            <div class="contact flow">
+                <div>
+                    <div class="img-icon">
+                        <img src="./assets/icon-location.svg" alt="">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doelusmod tempor indididunt ut labore et dolore magna aliqua</p>
+                </div>
+                <div>
+                    <div class="img-icon">
+                        <img src="./assets/icon-phone.svg" alt="">
+                    </div>
+                    <p>+1-543-123-4567</p>
+                </div>
+                <div>
+                    <div class="img-icon">
+                        <img src="./assets/icon-email.svg" alt="">
+                    </div>
+                    <p>example@Huddle.com</p>
+                </div>
+            </div>
+            <div class="about flow">
+                <p>About Us</p>
+                <p>What We Do</p>
+                <p>FAQ</p>
+            </div>
+            <div class="career flow">
+                <p>Career</p>
+                <p>Blog</p>
+                <p>Contact Us</p>
+            </div>
+            <div class="socials">
+                <i>" alt="">
             </div>
         </div>
     </footer>
