Add footer icons, Complete responsiveness

--- a/frontend/huddle/index.html
+++ b/frontend/huddle/index.html
@@ -99,9 +99,18 @@
                 <p>Contact Us</p>
             </div>
             <div class="socials">
-                <i>" alt="">
+                <div class="socials--icon facebook">
+                    <img src="./assets/icon-facebook.svg" alt="">
+                </div>
+                <div class="socials--icon">
+                    <img src="./assets/icon-twitter.svg" alt="">
+                </div>
+                <div class="socials--icon">
+                    <img src="./assets/icon-instagram.svg" alt="">
+                </div>
             </div>
         </div>
+        <p class="footer--copyright">&copy; Copyright 2022 Huddle. All rights reserved</p>
     </footer>
 </body>
 </html>
